# beampipe-core-v2

./: .dockerignore  .env.example  .env.template  .gitignore  .readthedocs.yaml  BeamPipeWallaby_Deploy.json  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  default.conf  docker-compose.prod.yml  docker-compose.yml  jobsub.sh  logo.txt  mkdocs.yml  openapi.json  pyproject.toml  rust-rewrite-plan.md  setup.py  wallaby-hires_deploy-setonix-beampipe.graph  wallaby-hires_deploy-setonix-beampipe_pgt.graph
.github/workflows/: release.yml  rust.yml
assets/brand/: imagegen-prompts.md
boilerplate_docs/: contributing.md  index.md  openapi.json
boilerplate_docs/about/: documentation-map.md
boilerplate_docs/api/: index.md  redoc.html  reference.md
boilerplate_docs/architecture/: adapters.md  control-plane.md  deployment-profiles.md  index.md  lifecycle.md  operator-overhaul-assessment.md  state-machine.md
boilerplate_docs/deployment-profiles/: index.md
boilerplate_docs/getting-started/: configuration.md  first-run.md  five-minute-start.md  index.md  installation.md
boilerplate_docs/javascripts/: bp-stars.js  redoc-init.js  terminal-ui.js
boilerplate_docs/operations/: console.md  daliuge-setonix.md  index.md  observability.md  operator-guide.md  production-runbook.md  recovery.md  upgrades-backups.md  workers-scheduling.md
boilerplate_docs/overrides/: main.html
boilerplate_docs/overrides/partials/: copyright.html
boilerplate_docs/project-configs/: graph-patches.md  index.md  transforms.md  wasm-hooks.md
boilerplate_docs/project-modules/: authoring.md  index.md  lifecycle.md
boilerplate_docs/reference/: cli.md  glossary.md
boilerplate_docs/stylesheets/: extra.css  redoc.css
boilerplate_docs/tools/: bruno.md  openapi.md
config/: deployment_profile.slurm-remote.json  shaping.1000sources.env  shaping.200sources.env  wallaby_hires.v1.yaml  wallaby_hires.v2.yaml
config/examples/: minimal_survey.v1.yaml  minimal_survey.v2.yaml
crates/beampipe-adapters/: Cargo.toml
crates/beampipe-adapters/src/: casda_datalink.rs  casda_staging.rs  lib.rs  tap_async.rs  tap_health.rs  votable.rs
crates/beampipe-adapters/tests/: casda_staging_parse.rs
crates/beampipe-alerts/: Cargo.toml
crates/beampipe-alerts/src/: lib.rs
crates/beampipe-api/: Cargo.toml
crates/beampipe-api/src/: correlation.rs  lib.rs  observability.rs  openapi.rs  rate_limit.rs  route_metrics.rs
crates/beampipe-api/tests/: openapi.rs
crates/beampipe-auth/: Cargo.toml
crates/beampipe-auth/src/: lib.rs
crates/beampipe-cli/: Cargo.toml
crates/beampipe-cli/src/: bench_tap.rs  console.rs  doctor.rs  init.rs  main.rs  operator.rs  setup.rs  timeline.rs
crates/beampipe-cli/tests/: project_validate.rs
crates/beampipe-config/: Cargo.toml
crates/beampipe-config/src/: lib.rs
crates/beampipe-db/: Cargo.toml
crates/beampipe-db/src/: lib.rs  models.rs  provenance.rs  repo.rs  test_modules.rs
crates/beampipe-db/tests/: discovery_signature.rs  recurring_job.rs  repo_integration.rs
crates/beampipe-domain/: Cargo.toml
crates/beampipe-domain/src/: admission.rs  diagnostics.rs  discovery.rs  execution.rs  external_state.rs  job_errors.rs  lib.rs  provenance.rs  readiness.rs  run_record.rs  slurm.rs
crates/beampipe-domain/tests/: run_record_merge.rs  slurm_state_golden.rs
crates/beampipe-jobs/: Cargo.toml
crates/beampipe-jobs/src/: lib.rs
crates/beampipe-jobs/tests/: admission_discovery.rs  admission_execution.rs  admission_unit.rs
crates/beampipe-metrics/: Cargo.toml
crates/beampipe-metrics/src/: lib.rs  otel.rs  refresh.rs  server.rs  trace_context.rs  tracing_layer.rs
crates/beampipe-orchestration/: Cargo.toml
crates/beampipe-orchestration/src/: cancel.rs  clients.rs  daliuge.rs  dim.rs  graph.rs  http_client.rs  lib.rs  manifest.rs  scheduler.rs  security.rs  slurm_batch.rs  slurm_credentials.rs  slurm_deploy.rs  slurm_ssh.rs  staging.rs  tm_health.rs  translator.rs
crates/beampipe-orchestration/tests/: daliuge_rest_flow.rs  dim_classification.rs  graph_injection.rs  manifest.rs  slurm_deploy.rs  slurm_translate.rs  staging.rs  translate_pipeline.rs
crates/beampipe-profiles/: Cargo.toml
crates/beampipe-profiles/src/: lib.rs
crates/beampipe-project/: Cargo.toml
crates/beampipe-project/src/: expressions.rs  lib.rs  transforms.rs  wasm.rs
crates/beampipe-security/: Cargo.toml
crates/beampipe-security/src/: lib.rs
deploy/: prometheus.yml
deploy/alertmanager/: alertmanager.yml
deploy/prometheus/: alerts.yml
deploy/ssh/: .gitignore  known_hosts.example
dev/: casda_hipass_latest_50.py  casda_hipass_sbid_visibility_counts.py  hipass_source_sbid_beam_counts.csv
migrations/: 20260531000100_core_schema.sql  20260531000200_execution_project_config_pin.sql  20260531000300_last_executed_discovery_signature.sql  20260531000400_observability_alerting.sql  20260604000100_provenance_retention.sql  20260713000100_operator_foundations.sql  20260713000200_worker_label_requirements.sql  20260713000300_profile_concurrency.sql
restate-config/: restate.toml
scripts/: cleanup-integration-test-sources.sql  export-openapi.sh  export_openapi.py  pg-backup.sh  setonix_render_dlg_ini.py  setonix_tm_translate.py  setonix_translate_lg_to_pgt.sh  sync-slurm-known-hosts.sh
scripts/custom_base/: Dockerfile  default.conf  docker-compose.yml
scripts/custom_base/restate-config/: restate.toml
scripts/local_dev/: Dockerfile  docker-compose.yml
scripts/production/: docker-compose.yml
scripts/production/restate-config/: restate.toml
scripts/setup/: .env.template
src/app/: restate_app.py
src/app/api/: dependencies.py
src/app/api/v1/: health.py  (+6 more)
src/app/core/: config.py  log_context.py  openapi.py  restate_invoke.py  schemas.py  setup.py
src/app/models/: ledger.py
src/app/restate_workflows/: discovery.py  execute.py  slurm_completion.py
src/app/schemas/: __init__.py  daliuge.py  ledger.py  projects.py  registry.py
tests/: test_deployment_profiles.py  test_ledger_partition_sources.py  test_project_module_contracts.py  test_sources_api.py
wit/: beampipe-hooks.wit
(+64 files in other folders)
