[package]
name = "beampipe-alerts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
beampipe-db = { path = "../beampipe-db" }
beampipe-domain = { path = "../beampipe-domain" }
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
