[package]
name = "beampipe-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bcrypt.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
