[package]
name = "beampipe-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
beampipe-domain = { path = "../beampipe-domain" }
beampipe-project = { path = "../beampipe-project" }
beampipe-security = { path = "../beampipe-security" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
utoipa = { version = "4", features = ["chrono", "uuid"] }

[dev-dependencies]
tokio.workspace = true
