[package]
name = "beampipe-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
beampipe-adapters = { path = "../beampipe-adapters" }
beampipe-db = { path = "../beampipe-db" }
beampipe-domain = { path = "../beampipe-domain" }
beampipe-orchestration = { path = "../beampipe-orchestration" }
redis.workspace = true
axum.workspace = true
serde_json.workspace = true
uuid.workspace = true
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.28"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
