[package]
name = "beampipe-orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
beampipe-adapters = { path = "../beampipe-adapters" }
beampipe-domain = { path = "../beampipe-domain" }
beampipe-profiles = { path = "../beampipe-profiles" }
beampipe-project = { path = "../beampipe-project" }
chrono.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "fs", "sync"] }
tracing.workspace = true
uuid.workspace = true
russh.workspace = true
ssh-key.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
