[package]
name = "beampipe-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
utoipa.workspace = true

[dev-dependencies]
serde_json.workspace = true
