[package]
name = "beampipe-project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
beampipe-domain = { path = "../beampipe-domain" }
jsonschema = "0.18"
regex = "1"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
utoipa.workspace = true
wasmtime = "28"

[dev-dependencies]
